--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     a data attribute that will populate the li node.
     Adding more sections will automatically populate nav.
     The first section is set to active class by default -->
-    <section id="section1" data-nav="Section 1" class="your-active-class">
+    <section id="section1" data-nav="Section 1" class="">
       <div class="landing__container">
         <h2>Section 1</h2>
         <p>
@@ -54,7 +54,7 @@
         </p>
       </div>
     </section>
-    <section id="section2" data-nav="Section 2">
+    <section id="section2" data-nav="Section 2" class="">
       <div class="landing__container">
         <h2>Section 2</h2>
         <p>
@@ -82,7 +82,7 @@
         </p>
       </div>
     </section>
-    <section id="section3" data-nav="Section 3">
+    <section id="section3" data-nav="Section 3" class="">
       <div class="landing__container">
         <h2>Section 3</h2>
         <p>
@@ -109,7 +109,7 @@
         </p>
       </div>
     </section>
-    <section id="section4" data-nav="Section 4">
+    <section id="section4" data-nav="Section 4" class="">
       <div class="landing__container">
         <h2>Section 4</h2>
         <p>
